# blog_v3

./: apiFormat.sh  apiTest.sh  docker-compose.yml  format.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: apiDeploy.yml  apiTest.yml
api/: .env.example  .env.local  .gitignore  .php-cs-fixer.dist.php  Dockerfile  _ide_helper.php  composer.json  package.json  serverless.yml
api/app/Console/: Kernel.php
api/app/Exceptions/: Handler.php
api/app/Http/: Kernel.php
api/app/Models/: User.php
api/app/Providers/: AppServiceProvider.php  AuthServiceProvider.php  DIServiceProvider.php  DataBaseQueryServiceProvider.php  DynamoServiceProvider.php  S3ServiceProvider.php
api/bootstrap/: app.php
api/config/: .gitignore  app.php  auth.php  cors.php  filesystems.php  sanctum.php
api/database/seeders/: BlogSeeder.php  DatabaseSeeder.php
api/resources/js/: bootstrap.js
api/routes/: api.php  web.php
api/tests/: DBSetUpTestCase.php
api/tests/Feature/: ExampleTest.php
client/: .env.development  Dockerfile  middleware.ts  next.config.js  package.json
client/pages/: _app.tsx  _document.js  index.tsx
client/pages/admin/: create.tsx  index.tsx  login.tsx
client/pages/blogs/: [blogId].tsx
client/styles/: color.ts  globals.scss
client/types/Blog/: AccessedBrowserType.ts  ActiveBlog.ts  Blog.ts  DetailBlog.ts  (+2 more)
client/wasm-markdown/: Cargo.toml
client/wasm-markdown/pkg/: package.json  wasm_markdown.d.ts  wasm_markdown.js  wasm_markdown_bg.js  wasm_markdown_bg.wasm  wasm_markdown_bg.wasm.d.ts
client/wasm-markdown/src/: lib.rs
database/: Dockerfile
(+113 files in other folders)
