[package]
name = "wasm-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"
pulldown-cmark = {version = "0.8", default-features = false}

[dependencies.web-sys]
features = [
  'Window',
]
version = "0.3.4"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-Oz", "--enable-mutable-globals"]